<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (C) 2016 Tanamo Inc.

Licensed under the Apache License, Version 2.0 (the "License");
You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>

    <string name="app_name">Dicto</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="add_word">Add Word</string>
    <string name="playstore_link">http://play.google.com/store/apps/details?id=</string>
    <string name="market_link">market://details?id=</string>
    <string name="banner_ad_unit_id">ca-app-pub-5926407368322067/9651022035</string>
    <string name="no_em_ins">There are no email clients installed.</string>
    <string name="fb">Feedback</string>
    <string name="about_text">The best offline dictionary for both Java and Kotlin Developers </string>
    <string name="author">Tanamo Inc.</string>
    <string name="website">Website</string>
    <string name="face">Facebook</string>
    <string name="website_url">"https://tanamo-inc.github.io/Home/"</string>
    <string name="face_url">https://www.facebook.com/Tanamo-Inc</string>
    <string name="about">About</string>
    <string name="dwq">Do you really want to quit ?</string>
    <string name="log_out_suc">Quit success!</string>
    <string name="github">Download Source Code</string>
    <string name="github_link">https://github.com/Tanamo-Inc/Dicto</string>
    <string name="word_to_del">No word to delete</string>
    <string name="word_to_ser">No word to search</string>
    <string name="fill_all">pls fill all the fields</string>
    <string name="ref">Android is an open-source operating system that is used primarily on mobile devices, such as cell phones, tablets,televisions etc. It is a Linux kernel-based system that’s been equipped with rich components that allows developers to create and run apps that can perform both basic and advanced functions.</string>
    <string name="android">android</string>


    <string name="sha">Please check out the Dicto App on google play! https://play.google.com/store/apps/details?id=com.tanamo.dicto</string>
    <string name="shavi">Share via</string>

    <string name="ques_1">1. Kotlin was created by which company ?</string>
    <string name="ques_1_1">Google</string>
    <string name="ques_1_2">JetBrains</string>
    <string name="ques_1_3">Oracle</string>


    <string name="ques_2">2. _____ is Immutable.</string>
    <string name="ques_2_1">val</string>
    <string name="ques_2_2">var</string>


    <string name="ques_3">3. Kotlin is ____ % Interoperable with Java and Android.</string>
    <string name="ques_3_1">100</string>

    <string name="ques_4">4. Kotlin named after Island in St.Petersburg</string>
    <string name="ques_4_1">True</string>
    <string name="ques_4_2">False</string>

    <string name="ques_5">5. Who is the Co-Founder of Android Inc.</string>
    <string name="ques_5_1">Larry Page</string>
    <string name="ques_5_2">Andy Rubin</string>
    <string name="ques_5_3">James Gosling</string>
    <string name="ques_5_4">Sundar Pichai</string>

    <string name="ques_6">6. All Data Types in kotlin are all objects.</string>
    <string name="ques_6_1">False</string>
    <string name="ques_6_2">True</string>

















    <string name="queso_1">1. Adb stands for ?</string>
    <string name="queso_1_1">Andoid Debug Bridge</string>
    <string name="queso_1_2">Android Debug Bridge</string>
    <string name="queso_1_3">Android Driver Bridge</string>


    <string name="queso_2">2.Which is NOT state of an activity?.</string>
    <string name="queso_2_1">Stored</string>
    <string name="queso_2_2">Stopped</string>


    <string name="queso_3">3. A fragment is a part or portion of an .</string>
    <string name="queso_3_1">activity</string>

    <string name="queso_4">4. Is list data type supported by AIDL?</string>
    <string name="queso_4_1">Yes</string>
    <string name="queso_4_2">No</string>

    <string name="queso_5">5. What is AIDL?.</string>
    <string name="queso_5_1">Android Interface Desktop Language</string>
    <string name="queso_5_2">Android Interface Definition Language</string>
    <string name="queso_5_3">Android Interface Description Language</string>
    <string name="queso_5_4">Android Interface Description Logic</string>

    <string name="queso_6">6. All Data Types in kotlin are not objects.</string>
    <string name="queso_6_1">True</string>
    <string name="queso_6_2">False</string>
    <string name="ansall">Answer All</string>
    <string name="tryagain">Try Again</string>
    <string name="quiz">Quiz</string>
    <string name="rate_us">Rate Us</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="more_apps">More Apps</string>
    <string name="feedback">FeedBack</string>
    <string name="quit">Quit</string>
    <string name="_00_00">00:00</string>
    <string name="ans">ans</string>


</resources>
