<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/quiz" />

        <item
            android:id="@+id/rat"
            android:icon="@drawable/ic_star_half_black_24dp"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/tell"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/tell_a_friend" />


        <item
            android:id="@+id/more"
            android:icon="@drawable/ic_more_horiz_black_24dp"
            android:title="@string/more_apps" />


        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/feedback" />


        <item
            android:id="@+id/quit"
            android:icon="@drawable/ic_logout"
            android:title="@string/quit" />


    </group>

</menu>