<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_backg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:hint="@string/_00_00"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:fontFamily="sans-serif"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textSize="@dimen/subtitle_size"
                android:textStyle="bold" />

            <RelativeLayout style="@style/ls">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/q1"
                    style="@style/qs"
                    android:text="@string/ques_1" />

                <RadioGroup
                    style="@style/gr"
                    android:layout_below="@id/q1">

                    <RadioButton
                        style="@style/rs"
                        android:text="@string/ques_1_1" />

                    <RadioButton
                        android:id="@+id/r2"
                        style="@style/rs"
                        android:text="@string/ques_1_2" />

                    <RadioButton
                        style="@style/rs"
                        android:text="@string/ques_1_3" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout style="@style/ls">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/q2"
                    style="@style/qs"
                    android:text="@string/ques_2" />

                <RadioGroup
                    style="@style/gr"
                    android:layout_below="@id/q2">

                    <RadioButton
                        android:id="@+id/r4"
                        style="@style/rs"
                        android:text="@string/ques_2_1" />

                    <RadioButton
                        style="@style/rs"
                        android:text="@string/ques_2_2" />


                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout style="@style/ls">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/q3"
                    style="@style/qs"
                    android:text="@string/ques_3" />

                <EditText
                    android:id="@+id/e1"
                    android:layout_width="@dimen/edit_text_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/q3"
                    android:background="@color/primary"
                    android:hint="@string/ans"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white">

                </EditText>

            </RelativeLayout>

            <RelativeLayout style="@style/ls">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/q4"
                    style="@style/qs"
                    android:text="@string/ques_4" />

                <RadioGroup
                    style="@style/gr"
                    android:layout_below="@id/q4">

                    <RadioButton
                        android:id="@+id/r6"
                        style="@style/rs"
                        android:text="@string/ques_4_1" />

                    <RadioButton
                        style="@style/rs"
                        android:text="@string/ques_4_2" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout style="@style/ls">

                <TextView
                    android:id="@+id/q5"
                    style="@style/qs"
                    android:text="@string/ques_5" />

                <RadioGroup
                    style="@style/gr"
                    android:layout_below="@id/q5">

                    <RadioButton
                        style="@style/rs"
                        android:text="@string/ques_5_1" />

                    <RadioButton
                        android:id="@+id/r9"
                        style="@style/rs"
                        android:text="@string/ques_5_2" />

                    <RadioButton
                        style="@style/rs"
                        android:text="@string/ques_5_3" />

                    <RadioButton
                        style="@style/rs"
                        android:text="@string/ques_5_4" />


                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout style="@style/ls">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/q6"
                    style="@style/qs"
                    android:text="@string/ques_6" />

                <RadioGroup
                    style="@style/gr"
                    android:layout_below="@id/q6">

                    <RadioButton
                        style="@style/rs"
                        android:text="@string/ques_6_1" />

                    <RadioButton
                        android:id="@+id/r13"
                        style="@style/rs"
                        android:text="@string/ques_6_2" />

                </RadioGroup>

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="init"
                android:src="@drawable/ic_sub" />

        </LinearLayout>

    </ScrollView>

    <fragment
        android:id="@+id/cedis"
        class="com.tanamo.dicto.util.Cedis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:layout="@layout/cedis" />

</RelativeLayout>